--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,12 @@
 
   <body>
 
-  
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+
+    <%= render 'shared/navbar' %>
+    <%= render 'shared/flashes' %>
+    
     <%= yield %>
   </body>
 </html>
